--- a/tsl-test/src/test/resources/vm/controller.vm
+++ b/tsl-test/src/test/resources/vm/controller.vm
@@ -10,6 +10,7 @@ import me.simple.web.method.support.LoginedUser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.MessageSource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -30,6 +31,9 @@ public class ${ClazzName}Controller {
 
     @Autowired
     private ${ClazzName}Service ${clazzName}Service;
+
+    @Autowired
+    private MessageSource messageSource;
 
     @RequestMapping(value = "index", method = RequestMethod.GET)
     public String index(@Validated(value = {Index.class}) ${ClazzName} ${clazzName}, BindingResult bindingResult, @LoginedUser CurrentUser currentUser, Model model) {
@@ -63,14 +67,20 @@ public class ${ClazzName}Controller {
         String message = null;
         Map<String,Object> body = Maps.newHashMap();
 
+        Map<String,Object> data = Maps.newHashMap();
         if (bindingResult.hasErrors()) {
             success = false;
-
+            List<FieldError> feList = bindingResult.getFieldErrors();
+            for (FieldError fe: feList) {
+                data.put(fe.getField(),
+                messageSource.getMessage(fe.getCode(),fe.getArguments(),fe.getDefaultMessage(),null));
+            }
         }else{
             ${clazzName}Service.save(${clazzName}, currentUser);
         }
 
         body.put("success",success);
+        body.put("data",data);
         body.put("message",message);
 
         return ResponseEntity.ok(body);
@@ -95,13 +105,21 @@ public class ${ClazzName}Controller {
         String message = null;
         Map<String,Object> body = Maps.newHashMap();
 
+        Map<String,Object> data = Maps.newHashMap();
+
         if (bindingResult.hasErrors()) {
             success = false;
+            List<FieldError> feList = bindingResult.getFieldErrors();
+            for (FieldError fe: feList) {
+                data.put(fe.getField(),
+                messageSource.getMessage(fe.getCode(),fe.getArguments(),fe.getDefaultMessage(),null));
+            }
         }else{
             ${clazzName}Service.remove(${clazzName}, currentUser);
         }
 
         body.put("success",success);
+        body.put("data",data);
         body.put("message",message);
 
         return ResponseEntity.ok(body);
@@ -135,14 +153,13 @@ public class ${ClazzName}Controller {
         boolean success = true;
         String message = null;
         Map<String,Object> body = Maps.newHashMap();
-        
+
+        Map<String,Object> data = Maps.newHashMap();
         if (bindingResult.hasErrors()) {
-            List<FieldError> fes = bindingResult.getFieldErrors();
-    
-            for (FieldError fe: fes
-            ) {
-            fe.getField();
-            fe.getRejectedValue();
+            List<FieldError> feList = bindingResult.getFieldErrors();
+            for (FieldError fe: feList) {
+                data.put(fe.getField(),
+                messageSource.getMessage(fe.getCode(),fe.getArguments(),fe.getDefaultMessage(),null));
             }
             success = false;
         }else{
@@ -150,6 +167,7 @@ public class ${ClazzName}Controller {
         }
     
         body.put("success",success);
+        body.put("data",data);
         body.put("message",message);
     
         return ResponseEntity.ok(body);
