--- a/tsl-test/src/test/resources/vm/service.impl.vm
+++ b/tsl-test/src/test/resources/vm/service.impl.vm
@@ -1,5 +1,6 @@
 package me.simple.sys.service.impl;
 
+import com.google.common.base.Splitter;
 import com.google.common.collect.Lists;
 import me.simple.domain.CurrentUser;
 import me.simple.domain.Pageable;
