--- a/tsl-test/src/test/resources/vm/create.js.vm
+++ b/tsl-test/src/test/resources/vm/create.js.vm
@@ -11,12 +11,7 @@ function ${tablename}_save() {
             if(data.success){
                 tabRefresh("/${tablename}/index");
             }else{
-                var errors = data.data;
-                var s = [];
-                for (var k in errors){
-                    s.push(k+" : "+errors[k]);
-                }
-                jQuery.messager.show({msg: s.join("<br>")});
+                jQuery.messager.show({msg: data.message});
             }
         }
     });
