--- a/tsl-test/src/test/resources/vm/create.jsp.vm
+++ b/tsl-test/src/test/resources/vm/create.jsp.vm
@@ -15,7 +15,7 @@
 
     <form:form id="${tablename}_create_form" method="post" servletRelativeAction="/${tablename}/save.json" commandName="${clazzName}">
         <%--<div style="margin-bottom:20px">
-            <form:input path="viewname" cssClass="easyui-textbox"  data-options="label:'viewname:',required:true" cssStyle="width: 100%;"/>
+            <form:input path="viewname" cssClass="easyui-textbox"  data-options="label:'viewname:',required:true,validType:{length:[2,32]}" cssStyle="width: 100%;"/>
             <form:errors path="viewname" />
         </div>--%>
         <div style="text-align:center;padding:5px 0">
