1. left menu (level 2) 2. sys menu model 3. add .tree-node style 4. tree defaults method 'get'

--- a/tsl-admin/src/main/webapp/WEB-INF/resources/css/common.css
+++ b/tsl-admin/src/main/webapp/WEB-INF/resources/css/common.css
@@ -12,3 +12,10 @@
     display: inline;
     margin-right: 8px;
 }
+
+.tree-node {
+    height: 18px;
+    white-space: nowrap;
+    cursor: pointer;
+    padding: 2px;
+}
